# sdrcat-protocol

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml
docs/: catconsole_commands.txt  diagrams.odg
src/sdrcat_console/: __init__.py  cli.py
src/sdrcat_protocol/: __init__.py  definitions.py  deviceinfo.py  network.py  util.py
src/sdrcat_protocol/action/: __init__.py  action.py  actionhub.py  definitions.py  generators.py
src/sdrcat_protocol/client/: __init__.py  clientbase.py
src/sdrcat_protocol/comm/: __init__.py  commbase.py  commclienttcp.py  commdevicetcp.py
src/sdrcat_protocol/coordinator/: __init__.py  clientcoordinator.py  clientcoordinatorcore.py  devicecoordinator.py  devicecoordinatorcore.py  devicecoordinatorsimplified.py  devicecoordinatorsimplifiedcore.py
src/sdrcat_protocol/device/: __init__.py  deviceallinone.py  devicebase.py
src/sdrcat_protocol_examples/: sampleclientimplementation.py  sampledeviceimplementation.py
tests/: test_clientcoordinator.py  test_deviceallinoneintegration.py  test_devicecoordinator.py  test_devicecoordinatorsimplified.py  test_network.py
