[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdrcatprotocol"
version = "0.0.1"
dependencies = [
    "textual",
    "aiofiles"
]
description = "Implementation of the sdrcat protocol from a device and client perspective"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
sdrcat_cli = "sdrcat_console:run"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]